# post_infinity

./: .gitignore  .gitlab-ci.yml  .mise.toml  .pre-commit-config.yaml  Cargo.toml  Cargo.toml.test  README.md  Readme.md  cliff.toml  default.nix  flake.nix
.github/workflows/: main.yaml  nightly.yaml  safety.yml
cli/: Cargo.toml
cli/src/: args.rs  lib.rs
docs/: example.webm
models/: Cargo.toml  Readme.md
models/fixtures/: #trollis.eff.json  AR0226.ARE  Effects.bif  ar0002.are  ar0002.are.json  ar0011.are  ar0011.are.json  ar0226.are.json  baldur.sav  bdparty.BAF  bdparty.baf  bg2eebaldur.gam  bg2eebaldur.gam.json  chitin.key  cutmelis.cre  cutmelis.cre.json  dbeggar.cre  dbeggar.cre.json  effects.bif.json  gate1.spl  gate1.spl.json  gopoof.itm  gopoof.itm.json  mazzy.dlg  mazzy.dlg.json  oh8400.are  oh8400.are.json  race.ids  race.ids.json  soundoff.ids  sw1h01.itm  sw1h01.itm.json  test.bio  test.bio.json  worldmap.wmp  worldmap.wmp.json  xpcap.2da  zbpdnote.itm  zbpdnote.itm.json
models/src/: area.rs  bam.rs  biff.rs  bio.rs  character.rs  creature.rs  dialog.rs  dialogue.rs  effect_v1.rs  effect_v2.rs  game.rs  ids.rs  item.rs  item_table.rs  key.rs  lib.rs  model.rs  save.rs  spell.rs  spell_table.rs  store.rs  tileset.rs  tlk.rs  twoda.rs  utils.rs  world_map.rs
models/src/common/: char_array.rs  feature_block.rs  fixed_char_array.rs  fixed_char_nd_array.rs  header.rs  ie_string.rs  mod.rs  parsers.rs  resref.rs  signed_fixed_char_array.rs  strref.rs  types.rs  variable_char_array.rs  varriable_char_array.rs
models/src/resources/: types.rs  utils.rs
src/: args.rs  cli.rs  main.rs  writer.rs
