[package]
name = "post_infinity"
version = "5.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[dependencies]
binrw = "0.14.0"
clap = { version = "4.0", features = ["derive"] }
erased-serde = "0.4"
models = { path = "./models" }
serde_json = "1.0"
