[package]
name = "models"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "^0.14.1"
erased-serde = "^0.4"
flate2 = { version = "^1.0.17" }
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.94"
zerovec = { version = "0.11.2", features = ["serde", "derive"] }

[dev-dependencies]
pretty_assertions = "^1.3.0"
tempfile = "^3"
