[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
binrw = "^0.14.1"
erased-serde = "^0.4"
flate2 = { version = "^1.0.17" }
log = "^0.4.22"
serde = { version = "^1.0.189", features = ["derive"] }
serde_json = "^1.0.94"
zerocopy =  "^0.8.33"
zerocopy-derive =  "^0.8.33"

[dev-dependencies]
pretty_assertions = "^1.3.0"
tempfile = "^3"
